2013-10-25  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.c-torture/execute/pr58831.c: New test.

2013-10-25  Nick Clifton  <nickc@redhat.com>

	* c-c++-common/pr57793.c: Add expected error messages for
	targets with small integers.
	* gcc.dg/c99-stdint-1.c: Only run on 32-bit plus targets.
	* gcc.dg/c99-stdint-2.c: Likewise.
	* gcc.dg/cdce1.c: Likewise.
	* gcc.dg/fold-overflow-1.c: Likewise.
	* gcc.dg/utf-cvt.c: Likewise.
	* gcc.dg/ftrapv-1.c: Only run on targets that support trapping
	arithmetic.
	* gcc.dg/ftrapv-2.c: Likewise.
	* gcc.dg/pr30286.c: Likewise.
	* gcc.dg/pr19340.c: Only run on targets that support
	scheduling.
	* lib/target-supports.exp (check_effective_target_trapping): New
	proc.  Returns true if the target supports trapping arithmetic.

2013-10-25  Tobias Burnus  <burnus@net-b.de>

	* g++.dg/parse/ivdep.C: New.
	* g++.dg/vect/pr33426-ivdep.cc: New.

2013-10-24  Richard Henderson  <rth@redhat.com>

	PR rtl/58542
	* gcc.dg/atomic-store-6.c: New.

2013-10-24  Ian Lance Taylor  <iant@google.com>

	* go.test/go-test.exp (errchk): Combine quoted strings in
	comments.

2013-10-24  Cong Hou  <congh@google.com>

	* gcc.c-torture/execute/20030125-1.c: Update.

2013-10-24  Tobias Burnus  <burnus@net-b.de>

	PR fortran/44646
	* gfortran.dg/vect/vect-do-concurrent-1.f90: New.

2013-10-24  Dehao Chen  <dehao@google.com>

	* g++.dg/opt/devirt3.C: New test.

2013-08-24  Tobias Burnus  <burnus@net-b.de>

	PR other/33426
	* testsuite/gcc.dg/ivdep.c: New.
	* testsuite/gcc.dg/vect/vect-ivdep-1.c: New.

2013-10-24  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gcc.target/aarch64/c-output-mod-2.c: Fix for -fPIC.
	* gcc.target/aarch64/c-output-mod-3.c: Likewise.

2013-10-24  Nick Clifton  <nickc@redhat.com>

	* gcc.dg/20020312-2.c: No PIC register for RL78 or MSP430.

2013-10-24  Marek Polacek  <polacek@redhat.com>

	PR c++/58705
	* g++.dg/parse/pr58705.C: New test.

2013-10-24  Marek Polacek  <polacek@redhat.com>

	* gcc.dg/c11-align-5.c: Add more testing.
